argocd/infra/argo-rollouts/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argo-rollouts
spec:
  endpointSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - argo-rollouts
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "3100"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: argo-rollouts
  egress:
    - toEntities:
        - kube-apiserver
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: argo-rollouts
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
